--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
         </header>
         <main>
             <section class="lead">
-                <h1 class="lead__title">Путешествия <br /> по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках <br />новостей, а здесь.</p>
+                <h1 class="lead__title">Путешествия <br> по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
                 <img src="./images/lead-polka.jpg" class="lead__image" alt="девушка в поезде">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
-                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%<br />
-                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На <br />самом деле,
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%<br>
+                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На <br>самом деле,
                     Россия
-                    — это целая вселенная с ласковым морем юга, густыми лесами <br />Саян и суровыми льдами плато
+                    — это целая вселенная с ласковым морем юга, густыми лесами <br>Саян и суровыми льдами плато
                     Путорана. А
-                    ещё увидеть все эти красоты можно без <br />миллионов на счету, загранпаспорта и многочасовых
+                    ещё увидеть все эти красоты можно без <br>миллионов на счету, загранпаспорта и многочасовых
                     перелетов.
-                    Как, например, Вера <br />Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
-                    усадила их<br />
-                    в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и <br />описали некоторые
+                    Как, например, Вера <br>Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+                    усадила их<br>
+                    в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и <br>описали некоторые
                     интересные места, достойные вашего отпуска.</p>
-                <p class="intro__list">Часовых поясов 11<br />place__paragraph
-                    Объектов природного наследия ЮНЕСКО 12<br />
-                    Объектов культурного наследия ЮНЕСКО 16<br />
-                    Природных заповедников 105<br />
+                <p class="intro__list">Часовых поясов 11<br>place__paragraph
+                    Объектов природного наследия ЮНЕСКО 12<br>
+                    Объектов культурного наследия ЮНЕСКО 16<br>
+                    Природных заповедников 105<br>
                     Аэропортов 241</p>
             </section>
-            <section class="photo-grid">
+            <div class="photo-grid">
                 <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
                 <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
                     alt="облака и заснеженные горы вид сверху">
@@ -58,7 +58,7 @@
                 <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка 2">
                 <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="зимний Байкал">
                 <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
-            </section>
+            </div>
             <section class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
@@ -132,8 +132,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <h3 class="place__url-heading">URL</h3>
-                        <a href="5. Карелия:
-                        http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
                     <p class="place__paragraph1">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -148,9 +147,9 @@
             </section>
             <section class="cover">
                 <div class="cover__overlay">
-                    <h2 class="cover__title">До Байкала <br />«на собаках»</h2>
+                    <h2 class="cover__title">До Байкала <br>«на собаках»</h2>
                     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle">По мотивам учебной
-                        темы о Транссибе <br />— путешествие от столицы до Байкала <br />на электричках</a>
+                        темы о Транссибе <br>— путешествие от столицы до Байкала <br>на электричках</a>
                     <img class="cover__background" src="./images/cover-trains.jpg" alt="поезда">
                 </div>
             </section>
