--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <main>
             <section class="lead">
-                <h1 class="lead__title">Путешествия <br>по России</h1>
+                <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
                 <img src="./images/lead-polka.jpg" class="lead__image" alt="девушка в поезде">
                 <p class="lead__caption">ваша полка — верхняя</p>
