--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
         </header>
         <main>
             <section class="lead">
-                <h1 class="lead__title">Путешествия <br>по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="./images/lead-polka.jpg" class="lead__image" alt="девушка в поезде">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
-                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%<br>
-                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На <br>самом деле,
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
                     Россия
-                    — это целая вселенная с ласковым морем юга, густыми лесами <br>Саян и суровыми льдами плато
+                    — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
                     Путорана. А
-                    ещё увидеть все эти красоты можно без <br>миллионов на счету, загранпаспорта и многочасовых
+                    ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых
                     перелетов.
-                    Как, например, Вера <br>Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
-                    усадила их<br>
-                    в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и <br>описали некоторые
+                    Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+                    усадила их
+                    в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
                     интересные места, достойные вашего отпуска.</p>
-                <p class="intro__list">Часовых поясов 11<br>place__paragraph
-                    Объектов природного наследия ЮНЕСКО 12<br>
-                    Объектов культурного наследия ЮНЕСКО 16<br>
-                    Природных заповедников 105<br>
+                <p class="intro__list">Часовых поясов 11place__paragraph
+                    Объектов природного наследия ЮНЕСКО 12
+                    Объектов культурного наследия ЮНЕСКО 16
+                    Природных заповедников 105
                     Аэропортов 241</p>
             </section>
             <div class="photo-grid">
@@ -147,9 +147,9 @@
             </section>
             <section class="cover">
                 <div class="cover__overlay">
-                    <h2 class="cover__title">До Байкала <br>«на собаках»</h2>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle">По мотивам учебной
-                        темы о Транссибе <br>— путешествие от столицы до Байкала <br>на электричках</a>
+                        темы о Транссибе — путешествие от столицы до Байкала на электричках</a>
                     <img class="cover__background" src="./images/cover-trains.jpg" alt="поезда">
                 </div>
             </section>
