--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
     <title>Путешествие по России</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
             <img src="./images/header-logo.svg" class="logo logo_place_header" alt="карта России">
@@ -38,11 +38,13 @@
                     усадила их
                     в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
                     интересные места, достойные вашего отпуска.</p>
-                <p class="intro__list">Часовых поясов 11place__paragraph
-                    Объектов природного наследия ЮНЕСКО 12
-                    Объектов культурного наследия ЮНЕСКО 16
-                    Природных заповедников 105
-                    Аэропортов 241</p>
+                <ul class="intro__list">
+                    <li>Часовых поясов <span class="intro__span">11</span></li>
+                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__span">12</span></li>
+                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span">16</span></li>
+                    <li>Природных заповедников <span class="intro__span">105</span></li>
+                    <li>Аэропортов <span class="intro__span">241</span></li>
+                </ul>
             </section>
             <div class="photo-grid">
                 <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
@@ -67,14 +69,18 @@
                         <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                     </div>
                     <img src="./images/place-kosa.jpg" class="place__image" alt="Коса">
-                    <p class="place__paragraph1">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-                        горизонта
-                        — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
-                        другой. Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place__paragraph2">На этом Калининградская область не заканчивается. Для путешественника и
-                        исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-                        наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-                        спокойствие природы и запах стального, прохладного моря.</p>
+                    <div class="place__paragraph">
+                        <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                            горизонта
+                            — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
+                            другой. Уникальная природная зона на краю российского анклава.</p>
+                        <p>На этом Калининградская область не заканчивается. Для путешественника и
+                            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
+                            немецкое
+                            наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
+                            окуная в
+                            спокойствие природы и запах стального, прохладного моря.</p>
+                    </div>
                 </div>
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
@@ -84,17 +90,21 @@
                             class="place__link">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
-                    <p class="place__paragraph1">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
-                        которой
-                        на юг —
-                        тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                    <p class="place__paragraph2">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
-                        фестиваля
-                        в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
-                        географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а
-                        от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться
-                        с билетом
-                        в Мурманск.</p>
+                    <div class="place__paragraph">
+                        <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+                            которой
+                            на юг —
+                            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                        <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+                            фестиваля
+                            в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
+                            географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
+                            а
+                            от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает
+                            сбываться
+                            с билетом
+                            в Мурманск.</p>
+                    </div>
                 </div>
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
@@ -104,14 +114,17 @@
                             class="place__link">Facebook</a>
                     </div>
                     <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
-                    <p class="place__paragraph1">Алтай — одно из красивейших мест в России.
-                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-                        горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
-                        чудом здешних мест — горным воздухом.</p>
-                    <p class="place__paragraph2">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
-                        увидите
-                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а
-                        на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                    <div class="place__paragraph">
+                        <p>Алтай — одно из красивейших мест в России.
+                            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                            горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
+                            чудом здешних мест — горным воздухом.</p>
+                        <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+                            увидите
+                            всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
+                            орлы, а
+                            на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                    </div>
                 </div>
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
@@ -120,13 +133,17 @@
                         <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
-                    <p class="place__paragraph1">Всем известен Байкал как крупнейшее озеро
-                        в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-                        мест в России.</p>
-                    <p class="place__paragraph2">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-                        к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-                        фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                    <div class="place__paragraph">
+                        <p>Всем известен Байкал как крупнейшее озеро
+                            в мире. Многие также знают, что это самый большой источник пресной воды и одно из
+                            красивейших
+                            мест в России.</p>
+                        <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+                            скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+                            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
+                            года на
+                            фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                    </div>
                 </div>
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
@@ -135,23 +152,23 @@
                         <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
-                    <p class="place__paragraph1">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                    <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                         сибирская
                         лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса
                         карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
-                        соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
+                        соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
+                        раньше,
                         чем увидал его Иван Грозный.
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </section>
             <section class="cover">
-                <div class="cover__overlay">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
-                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle">По мотивам учебной
-                        темы о Транссибе — путешествие от столицы до Байкала на электричках</a>
-                    <img class="cover__background" src="./images/cover-trains.jpg" alt="поезда">
-                </div>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                        на электричках </p>
+                </a>
             </section>
         </main>
 
