--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
                     </div>
                     <img src="./images/place-kosa.jpg" class="place__image" alt="Коса">
                     <div class="place__paragraph">
-                        <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                        <p class="place__paragraph1">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                             горизонта
                             — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
                             другой. Уникальная природная зона на краю российского анклава.</p>
-                        <p>На этом Калининградская область не заканчивается. Для путешественника и
+                        <p class="place__paragraph1">На этом Калининградская область не заканчивается. Для
+                            путешественника и
                             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
                             немецкое
                             наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
@@ -91,11 +92,13 @@
                     </div>
                     <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
                     <div class="place__paragraph">
-                        <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+                        <p class="place__paragraph1">Почти весь полуостров находится за Полярным кругом. Саамская
+                            тундра, от
                             которой
                             на юг —
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                        <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+                        <p class="place__paragraph1">Возможно, вы смотрели Звягинцева и даже слышали историю
+                            арктического
                             фестиваля
                             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
                             географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
@@ -115,11 +118,12 @@
                     </div>
                     <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
                     <div class="place__paragraph">
-                        <p>Алтай — одно из красивейших мест в России.
+                        <p class="place__paragraph1">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                             горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
-                        <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+                        <p class="place__paragraph1">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                            Так вы
                             увидите
                             всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
                             орлы, а
@@ -134,11 +138,12 @@
                     </div>
                     <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
                     <div class="place__paragraph">
-                        <p>Всем известен Байкал как крупнейшее озеро
+                        <p class="place__paragraph1">Всем известен Байкал как крупнейшее озеро
                             в мире. Многие также знают, что это самый большой источник пресной воды и одно из
                             красивейших
                             мест в России.</p>
-                        <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+                        <p class="place__paragraph1">Конечно, это всё так. Но Байкал ещё идеальное место
+                            для соревнований по
                             скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
                             года на
