--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img src="./images/header-logo.svg" class="logo logo_place_header" alt="карта России">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link">Ru</a>
+                <a href="#" class="header__lang-link-active">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
@@ -46,21 +46,24 @@
                     <li>Аэропортов <span class="intro__span">241</span></li>
                 </ul>
             </section>
-            <div class="photo-grid">
-                <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
-                <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
-                    alt="облака и заснеженные горы вид сверху">
-                <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="овчарка на стоге сена">
-                <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="елки в тумане">
-                <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="колесо на льду">
-                <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="на берегу озера Байкал">
-                <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
-                <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="каменные штуковины">
-                <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Камчатка">
-                <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка 2">
-                <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="зимний Байкал">
-                <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
-            </div>
+            <section class="photo">
+                <div class="photo-grid">
+                    <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
+                    <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
+                        alt="облака и заснеженные горы вид сверху">
+                    <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="овчарка на стоге сена">
+                    <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="елки в тумане">
+                    <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="колесо на льду">
+                    <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="на берегу озера Байкал">
+                    <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
+                    <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="каменные штуковины">
+                    <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Камчатка">
+                    <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка 2">
+                    <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="зимний Байкал">
+                    <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
+                </div>
+            </section>
+            </section>
             <section class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
@@ -70,11 +73,12 @@
                     </div>
                     <img src="./images/place-kosa.jpg" class="place__image" alt="Коса">
                     <div class="place__paragraph">
-                        <p class="place__paragraph1">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                        <p class="place__paragraph-paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть
+                            два водных
                             горизонта
                             — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
                             другой. Уникальная природная зона на краю российского анклава.</p>
-                        <p class="place__paragraph1">На этом Калининградская область не заканчивается. Для
+                        <p class="place__paragraph-paragraph">На этом Калининградская область не заканчивается. Для
                             путешественника и
                             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
                             немецкое
@@ -86,18 +90,19 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <h3 class="place__url-heading">URL</h3>
+                        <p class="place__url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                             class="place__link">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
                     <div class="place__paragraph">
-                        <p class="place__paragraph1">Почти весь полуостров находится за Полярным кругом. Саамская
+                        <p class="place__paragraph-paragraph">Почти весь полуостров находится за Полярным кругом.
+                            Саамская
                             тундра, от
                             которой
                             на юг —
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                        <p class="place__paragraph1">Возможно, вы смотрели Звягинцева и даже слышали историю
+                        <p class="place__paragraph-paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю
                             арктического
                             фестиваля
                             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
@@ -118,11 +123,12 @@
                     </div>
                     <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
                     <div class="place__paragraph">
-                        <p class="place__paragraph1">Алтай — одно из красивейших мест в России.
+                        <p class="place__paragraph-paragraph">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                             горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
-                        <p class="place__paragraph1">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                        <p class="place__paragraph-paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего
+                            летом.
                             Так вы
                             увидите
                             всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
@@ -138,11 +144,11 @@
                     </div>
                     <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
                     <div class="place__paragraph">
-                        <p class="place__paragraph1">Всем известен Байкал как крупнейшее озеро
+                        <p class="place__paragraph-paragraph">Всем известен Байкал как крупнейшее озеро
                             в мире. Многие также знают, что это самый большой источник пресной воды и одно из
                             красивейших
                             мест в России.</p>
-                        <p class="place__paragraph1">Конечно, это всё так. Но Байкал ещё идеальное место
+                        <p class="place__paragraph-paragraph">Конечно, это всё так. Но Байкал ещё идеальное место
                             для соревнований по
                             скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
@@ -157,19 +163,22 @@
                         <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
-                    <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-                        сибирская
-                        лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса
-                        карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
-                        соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
-                        раньше,
-                        чем увидал его Иван Грозный.
-                        В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-                        в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                    <div class="place__paragraph">
+                        <p class="place__paragraph-paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая
+                            тайгу
+                            сибирская
+                            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса
+                            карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым
+                            соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
+                            раньше,
+                            чем увидал его Иван Грозный.
+                            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+                            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                    </div>
                 </div>
             </section>
             <section class="cover">
-                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                         на электричках </p>
@@ -178,13 +187,13 @@
         </main>
 
         <footer class="footer">
-            <div class="footer__links">
+            <nav class="footer__links">
                 <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
                 <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
                 <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
                 <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
                 <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-            </div>
+            </nav>
             <p class="footer__author">&copy; 2022. Мария Матусовская</p>
         </footer>
     </div>
