--- a/index.html
+++ b/index.html
@@ -46,23 +46,27 @@
                     <li>Аэропортов <span class="intro__span">241</span></li>
                 </ul>
             </section>
-            <section class="photo">
-                <div class="photo-grid">
-                    <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
-                    <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
-                        alt="облака и заснеженные горы вид сверху">
-                    <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="овчарка на стоге сена">
-                    <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="елки в тумане">
-                    <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="колесо на льду">
-                    <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="на берегу озера Байкал">
-                    <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
-                    <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="каменные штуковины">
-                    <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Камчатка">
-                    <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка 2">
-                    <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="зимний Байкал">
-                    <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
-                </div>
-            </section>
+            <section class="photo-grid">
+                <h2 class="photo-grid__noneed">ерунда</h2>
+                <ul class="photo-grid__items">
+                    <li> <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
+                    </li>
+                    <li> <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
+                            alt="облака и заснеженные горы вид сверху"></li>
+                    <li><img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="овчарка на стоге сена">
+                    </li>
+                    <li> <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="елки в тумане"></li>
+                    <li> <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="колесо на льду"></li>
+                    <li><img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="на берегу озера Байкал">
+                    </li>
+                    <li><img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус"></li>
+                    <li> <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item"
+                            alt="каменные штуковины"></li>
+                    <li><img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Камчатка"></li>
+                    <li><img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка 2"></li>
+                    <li><img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="зимний Байкал"></li>
+                    <li> <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки"></li>
+                </ul>
             </section>
             <section class="places">
                 <div class="place">
