--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
     <title>Путешествие по России</title>
     <link rel="stylesheet" href="./pages/index.css">
+    <meta name="robots" content="noindex,nofollow">
 </head>
 
 <body class="body">
